<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Stylista</string>
    <string name="title_home">Home</string>

    /***Fatma***/

    <string name="category">Category</string>
    <string name="profile">Profile</string>
    <string name="searchForProduct">Search for product</string>
    <string name="brand">Brands</string>
    <string name="shoes">SHOES</string>
    <string name="accessories">ACCESSORIES</string>
    <string name="shirt">T-SHIRTS</string>
    <string name="price">Price</string>
    <string name="homePage">Home Page</string>
    <string name="kid">Kid</string>
    <string name="men">Men</string>
    <string name="women">Women</string>
    <string name="sale">Sale</string>
    <string name="brand_Products">Brand’s Products</string>
    <string name="product_Details">Product’s Details</string>
    <string name="search">Search</string>
    <string name="createdAt">Created at:</string>
    <string name="orderNumber">Order number:</string>
    <string name="productsOrder">Products</string>
    <string name="priceOrder">Price:</string>
    <string name="title">Title:</string>
    <string name="more">show more</string>
    <string name="orders">Orders</string>
    <string name="noInternet">No internet</string>
    <string name="cartIsEmpty">Cart is empty</string>
    <string name="favoriteIsEmpty">Favorite is empty</string>

    /***Fatma***/

    /***Marina***/
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="success">Sign up Successfully</string>
    <string name="emailNameEmpty">Email field is empty</string>
    <string name="passwordEmpty">password field is empty</string>
    <string name="confirmPasswordEmpty">Confirm password field is empty</string>
    <string name="matchPassword">Password and confirm password do not match</string>
    <string name="validateEmail">Invalid email format</string>
    <string name="validatePassword">Password must contain at least 8 characters, including one uppercase letter, one lowercase letter, and one digit</string>
    <string name="email_verified">Email is verified</string>
    <string name="email_not_verified">Email is not verified,please verified your email</string>
    <string name="email_verification_failed">Email verification is failed</string>
    <string name="signup_failed">Sign up is failed</string>
    <string name="login_success">Sign in Successfully</string>
    <string name="login_faild"> Login failed</string>
    <string name="login_empty_email">please,enter email</string>
    <string name="login_empty_password">please,enter password</string>
    <string name="login_valid_password">password is not match</string>
    <string name="login_valid_email">email is not found, can you register First. </string>
    <string name="email_isExist">Email is already exist</string>
    <string name="verfid">please, verify your email</string>
    <string name="check_login">Please Login First</string>
    <string name="skip">Guest</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reviews">View reviews</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="description">"Description "</string>
    <string name="more_than">more..</string>
    <string name="send_verification">Send Verification Email</string>
    <string name="all_brand">All Brand</string>
    <string name="search_product">search for product</string>
    <string name="search_brand">search for brand</string>
    <string name="available_size">Available Size</string>
    <string name="logout">logout</string>
    <string name="user_name">User Name</string>
    <string name="userNameEmpty">User name field is empty</string>
    <string name="add_favourite"> Add this product to favorites</string>
    <string name="remove_favourite">remove this product to favorites</string>
    <string name="is_add_favourite">Are you sure you want to add this product to favorites?</string>
    <string name="is_remove_favourite">Are you sure you want to remove this product from favorites?</string>
    <string name="select_size">Please, choose your size from Avaliable Size Menu.</string>
    <string name="my_favourite">My Favourite</string>
    <string name="wish_list">Wish list</string>
    <string name="favourite_fail">please, login first.</string>
    <string name="choose_size">Choose Size</string>
    <string name="added_to_cart_confirm">Are you sure to add size: </string>
    <string name="addedd_countinue_cart"> to the cart?</string>
    <string name="yes"> Yes</string>
    <string name="cancel"> Cancel</string>
    <string name="welcome">Welcome! </string>
    <string name="firbase_signin_try_agin"> Access to this account has been temporarily disabled due to many failed login attempts</string>
    <string name="no_favourite">No items in favourite</string>
    <string name="logout_confirm">Are you sure you want to logout?</string>
    /***Marina***/

    /***Ahmed***/
    <string name="please_fill_all_data">Please fill all data.</string>
    <string name="checkout">Checkout</string>
    <string name="subtotal">Subtotal</string>
    <string name="delivery">Delivery</string>
    <string name="currency">Currency</string>
    <string name="addresses">Addresses</string>
    <string name="default_word">Default</string>
    <string name="changeCurrencyAssurance">Are you sure you want to choose %1$s as a main currency</string>
    <string name="are_you_sure_you_want_to_delete_this_item_from_the_cart">are you sure you want to delete this item from the cart</string>
    <string name="address_2">address 2</string>
    <string name="address_1">address 1</string>
    <string name="city">city</string>
    <string name="province">province</string>
    <string name="phone">phone</string>
    <string name="country">country</string>
    <string name="save">save</string>
    <string name="set_as_default_address">set as default address</string>
    <string name="address">Address</string>
    <string name="no_addresses_yet">No addresses yet</string>
    <string name="add_new_address">Add new address</string>
    <string name="are_you_sure_you_want_to_delete_this_address">are you sure you want to delete this address</string>
    <string name="something_went_wrong">Something Went Wrong</string>
    <string name="cannot_delete_the_customer_s_default_address">You cannot delete your default address</string>
    <string name="are_you_sure_you_want_to_make_this_address_your_default_address">Are you sure you want to make this address as a default address</string>
    <string name="sorry_no_available_quantity">Sorry, no available quantity</string>
    <string name="shipping_address">Shipping address</string>
    <string name="cash_on_delivery">Cash On Delivery</string>
    <string name="google_pay">Google Pay</string>
    <string name="change"><u>Change</u></string>
    <string name="no_address_associated_with_this_account">No address associated with this account</string>
    <string name="coupon_is_expired">Coupon is Expired</string>
    <string name="coupon_is_not_found">Coupon is not found</string>
    <string name="discount_applied">Discount Applied</string>
    <string name="can_t_apply_that_coupon_to_that_pilling">Can\'t apply that coupon to that pilling</string>
    <string name="added_to_cart_successfully">Added to cart Successfully</string>
    <string name="product_is_already_added_to_cart">Product is already added to cart</string>
    <string name="go_to_cart">Go to Cart</string>
    <string name="dismiss">Dismiss</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="total">Total</string>
    <string name="try_again">Try Again</string>
    <string name="your_order_is_confirmed">your order is confirmed</string>
    <string name="something_went_wrong_while_completing_your_order">Something went wrong while completing your order</string>
    <string name="proceed_to_buy">Proceed to buy</string>
    <string name="please_add_new_address_first">Please Add new address first</string>
    <string name="address_details">address details</string>
    <string name="search_for_your_address">Search for your address: </string>
    <string name="no_available_coupons">No Available coupons</string>
    <string name="apply">apply</string>

    /***Ahmed***/
</resources>