<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.address.edit.AddressDetailsEditFragment">


    <com.google.android.material.card.MaterialCardView

        android:id="@+id/autocomplete_card_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="@+id/address_title"
        app:layout_constraintStart_toStartOf="@+id/address_title"
        app:layout_constraintTop_toBottomOf="@+id/textView7">

        <fragment
            android:id="@+id/autocomplete_fragment"
            android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/address_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/title"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/address_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/autocomplete_card_view" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/address_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/address_details"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/address_city"
        app:layout_constraintEnd_toEndOf="@+id/address_title"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/address_title"
        app:layout_constraintTop_toBottomOf="@+id/address_title" />

    <TextView
        android:id="@+id/address_city"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/city"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/editTextProvince"
        app:layout_constraintEnd_toStartOf="@+id/address_phone"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/address_2"
        app:layout_constraintTop_toBottomOf="@+id/address_2" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/address_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="phone"
        app:layout_constraintBottom_toBottomOf="@+id/address_city"
        app:layout_constraintEnd_toEndOf="@+id/address_2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/address_city"
        app:layout_constraintTop_toTopOf="@+id/address_city" />

    <TextView
        android:id="@+id/editTextProvince"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:foregroundTint="@color/primary_color"
        android:hint="@string/province"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/address_city"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/address_city"
        app:layout_constraintTop_toBottomOf="@+id/address_city" />

    <TextView
        android:id="@+id/editTextCountry"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/country"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/editTextProvince"
        app:layout_constraintEnd_toEndOf="@+id/address_phone"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/editTextProvince"
        app:layout_constraintStart_toStartOf="@+id/address_phone"
        app:layout_constraintTop_toTopOf="@+id/editTextProvince"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="@+id/editTextCountry"
        app:layout_constraintStart_toStartOf="@+id/editTextProvince"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:textColor="@color/primary_color"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/set_as_default_address"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="@+id/editTextProvince"
        app:layout_constraintTop_toBottomOf="@+id/editTextProvince" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/primary_color"
        android:indeterminateTintMode="src_atop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/primary_color"
        android:text="@string/search_for_your_address"
        app:layout_constraintStart_toStartOf="@+id/address_title"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

</androidx.constraintlayout.widget.ConstraintLayout>