<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.mad43.stylista.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_brandFragment2"
            app:destination="@id/brandFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.mad43.stylista.ui.category.CategoryFragment"
        android:label="@string/category"
        tools:layout="@layout/fragment_category" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.mad43.stylista.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/searchFragment"
        android:name="com.mad43.stylista.ui.search.SearchFragment"
        android:label="fragment_search"
        tools:layout="@layout/fragment_search" />
    <fragment
        android:id="@+id/brandFragment"
        android:name="com.mad43.stylista.ui.brand.BrandFragment"
        android:label="fragment_brand"
        tools:layout="@layout/fragment_brand" >
        <argument
            android:name="brand"
            app:argType="string" />
        <action
            android:id="@+id/action_brandFragment_to_productDetailsFragment"
            app:destination="@id/productDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/productDetailsFragment"
        android:name="com.mad43.stylista.ui.details.ProductDetailsFragment"
        android:label="fragment_product_details"
        tools:layout="@layout/fragment_product_details" >
        <argument
            android:name="id"
            app:argType="long" />
    </fragment>
</navigation>