<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.view.ProfileFragment">


    <TextView
        android:id="@+id/textViewHelloUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="#5E5B5B"
        app:layout_constraintStart_toStartOf="@+id/guideline10"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonLogOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/textViewHelloUserName"
        app:layout_constraintEnd_toStartOf="@+id/guideline11"
        app:layout_constraintTop_toTopOf="@+id/textViewHelloUserName"
        app:layout_constraintVertical_bias="0.31" />

    <TextView
        android:id="@+id/textViewWishList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/wish_list"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="#5E5B5B"
        app:layout_constraintEnd_toEndOf="@+id/textViewHelloUserName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline10"
        app:layout_constraintTop_toBottomOf="@+id/textViewHelloUserName" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="15dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="15dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewWishList"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline11"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/guideline10"
        app:layout_constraintTop_toBottomOf="@+id/textViewWishList" />

    <TextView
        android:id="@+id/textViewMoreWishList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/more_than"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewWishList"
        app:layout_constraintEnd_toStartOf="@+id/guideline11"
        app:layout_constraintTop_toTopOf="@+id/textViewWishList" />
</androidx.constraintlayout.widget.ConstraintLayout>