<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.brand.BrandFragment" >

    <androidx.cardview.widget.CardView
        android:id="@+id/filter"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        app:cardCornerRadius="20dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/light_green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="2"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/priceFilter"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/price"
                android:layout_weight="1"
                android:textSize="20sp"
                android:gravity="center"
                android:textColor="@color/primary_color"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/categoryFilter"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/categoryFilter"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/category"
                android:textSize="20sp"
                android:gravity="center"
                android:textColor="@color/primary_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/priceFilter" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/filterValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/filter"
        app:layout_constraintBottom_toTopOf="@id/recyclerView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="5">
        <TextView
            android:id="@+id/priceDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/price"
            android:textColor="@color/primary_color"
            android:textSize="20sp"/>
        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp" />

        </LinearLayout>
        <RadioGroup
            android:id="@+id/categoryGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:weightSum="3"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="10dp">

            <RadioButton
                android:id="@+id/shoes"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:buttonTint="@color/primary_color"
                android:text="@string/shoes"
                android:textColorLink="@color/primary_color"
                android:textColorHint="@color/primary_color" />

            <RadioButton
                android:id="@+id/accessories"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:buttonTint="@color/primary_color"
                android:text="@string/accessories"
                android:textColorLink="@color/primary_color"
                android:textColorHint="@color/primary_color" />

            <RadioButton
                android:id="@+id/shirt"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:buttonTint="@color/primary_color"
                android:textColorLink="@color/primary_color"
                android:text="@string/shirt"
                android:textColorHint="@color/primary_color" />

        </RadioGroup>

    </androidx.cardview.widget.CardView>


    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmerFrameLayoutBrand"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filterValue">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/home_brand_shimmer_placeholder" />

            <include layout="@layout/home_brand_shimmer_placeholder" />

            <include layout="@layout/home_brand_shimmer_placeholder" />

            <include layout="@layout/home_brand_shimmer_placeholder" />

            <include layout="@layout/home_brand_shimmer_placeholder" />

            <include layout="@layout/home_brand_shimmer_placeholder" />

            <include layout="@layout/home_brand_shimmer_placeholder" />

            <include layout="@layout/home_brand_shimmer_placeholder" />

            <include layout="@layout/home_brand_shimmer_placeholder" />

        </LinearLayout>
    </com.facebook.shimmer.ShimmerFrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filterValue" />
</androidx.constraintlayout.widget.ConstraintLayout>